--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -52,6 +52,7 @@
   },
   "sap.ui": {
     "technology": "UI5",
+    "fullWidth": true,
     "icons": {
       "icon": "",
       "favIcon": "",
@@ -72,7 +73,13 @@
       "minUI5Version": "1.120.25",
       "libs": {
         "sap.m": {},
-        "sap.ui.core": {}
+        "sap.ui.core": {},
+        "sap.f": {},
+        "sap.suite.ui.generic.template": {},
+        "sap.ui.comp": {},
+        "sap.ui.generic.app": {},
+        "sap.ui.table": {},
+        "sap.ushell": {}
       }
     },
     "contentDensities": {
@@ -86,10 +93,30 @@
           "bundleName": "com.iherb.tm.ztmiherbpurchaseorders.i18n.i18n"
         }
       },
+      "POTableModel": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {
+           
+        }
+      },
+      "PkgModel": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {
+          
+        }
+      },
+      "PartnerModel": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {
+          
+        }
+      },
       "": {
         "dataSource": "mainService",
         "preload": true,
-        "settings": {}
+        "settings": {
+          "defaultBindingMode": "TwoWay"
+        }
       }
     },
     "resources": {
