--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -155,6 +155,9 @@
       ],
       "targets": {
         "TargetPOtable": {
+          "viewType": "XML",
+          "transition": "slide",
+          "clearControlAggregation": false,
           "id": "POtable",
           "name": "POtable"
         }
@@ -163,6 +166,7 @@
     "rootView": {
       "viewName": "com.iherb.tm.ztmiherbpurchaseorders.view.App",
       "type": "XML",
+      "async": true,
       "id": "App"
     }
   },
